// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compilation > hello world > compiled 1`] = `
"@const_11 = constant [13 x i8] c"hello world!\\00"
define i32 @main() {
  main: 
    %var_12 = getelementptr [13 x i8], [13 x i8]* @const_11, i64 0, i64 0
    %var_13 = call i32 @puts(i8* %var_12)
    ret i32 0
}
declare i32 @puts(i8*)
"
`;

exports[`compilation > hello world > stderr 1`] = `[]`;

exports[`compilation > hello world > stdout 1`] = `
[
  "hello world!
",
]
`;

exports[`compilation > hello world string > compiled 1`] = `
"@const_6 = constant [13 x i8] c"hello world!\\00"
define i32 @main() {
  main: 
    ret i32 0
}
"
`;

exports[`compilation > hello world string > stderr 1`] = `[]`;

exports[`compilation > hello world string > stdout 1`] = `[]`;

exports[`compilation > hello world twice > compiled 1`] = `
"@const_25 = constant [13 x i8] c"hello world!\\00"
define i32 @main() {
  main: 
    %var_26 = getelementptr [13 x i8], [13 x i8]* @const_25, i64 0, i64 0
    %var_27 = call i32 @puts(i8* %var_26)
    %var_28 = getelementptr [13 x i8], [13 x i8]* @const_25, i64 0, i64 0
    %var_29 = call i32 @puts(i8* %var_28)
    ret i32 0
}
declare i32 @puts(i8*)
"
`;

exports[`compilation > hello world twice > stderr 1`] = `[]`;

exports[`compilation > hello world twice > stdout 1`] = `
[
  "hello world!
hello world!
",
]
`;

exports[`compilation > two prints > compiled 1`] = `
"@const_25 = constant [13 x i8] c"hello world!\\00"
@const_28 = constant [15 x i8] c"hello world 2!\\00"
define i32 @main() {
  main: 
    %var_26 = getelementptr [13 x i8], [13 x i8]* @const_25, i64 0, i64 0
    %var_27 = call i32 @puts(i8* %var_26)
    %var_29 = getelementptr [15 x i8], [15 x i8]* @const_28, i64 0, i64 0
    %var_30 = call i32 @puts(i8* %var_29)
    ret i32 0
}
declare i32 @puts(i8*)
"
`;

exports[`compilation > two prints > stderr 1`] = `[]`;

exports[`compilation > two prints > stdout 1`] = `
[
  "hello world!
hello world 2!
",
]
`;
